RESOLVED FIXED266529
REGRESSION (UI-side compositing): Unable to scroll to top of page after double tapping trackpad causes page to scroll down
https://bugs.webkit.org/show_bug.cgi?id=266529
Summary REGRESSION (UI-side compositing): Unable to scroll to top of page after doubl...
Simon Fraser (smfr)
Reported 2023-12-15 21:18:14 PST
1. Open a page that’s longer than the window height. I used https://www.abc.net.au/news. 2. Double tap the trackpad somewhere towards the bottom of the page. The page scrolls down a bit. 3. Try to scroll back to the top of the page, but it’s not possible.
Attachments
Simon Fraser (smfr)
Comment 1 2023-12-15 21:18:25 PST
Simon Fraser (smfr)
Comment 2 2023-12-15 21:29:37 PST
EWS
Comment 3 2023-12-18 10:49:40 PST
Committed 272229@main (3a5a2dc6d7b1): <https://commits.webkit.org/272229@main> Reviewed commits have been landed. Closing PR #21918 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.